# sticker-simulator

./: COMMON.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  TODO.md
.github/workflows/: ci.yml  cron.yml  release.yml
binder/: README.md  postBuild  start
evcxr/: Cargo.toml  HOW_IT_WORKS.md  LICENSE  README.md
evcxr/examples/: example_eval.rs
evcxr/src/: cargo_metadata.rs  child_process.rs  code_block.rs  command_context.rs  crash_guard.rs  crate_config.rs  errors.rs  eval_context.rs  evcxr_internal_runtime.rs  item.rs  lib.rs  module.rs  runtime.rs  rust_analyzer.rs  statement_splitter.rs  use_trees.rs
evcxr/src/testdata/: sample_metadata.json
evcxr/tests/: integration_tests.rs
evcxr_input/: Cargo.toml
evcxr_input/src/: lib.rs
evcxr_jupyter/: Cargo.toml  LICENSE  README.md
evcxr_jupyter/client/: kernel.js
evcxr_jupyter/samples/: evcxr_jupyter_tour.ipynb
evcxr_jupyter/src/: connection.rs  control_file.rs  core.rs  install.rs  jupyter_message.rs  main.rs
evcxr_jupyter/tests/: integration_tests.rs
evcxr_repl/: Cargo.toml  LICENSE  README.md
evcxr_repl/src/: bginit.rs  lib.rs  repl.rs  scan.rs
evcxr_repl/tests/: integration_tests.rs
evcxr_runtime/: Cargo.toml  LICENSE  README.md
evcxr_runtime/src/: lib.rs
print_performance_info/: Cargo.toml
print_performance_info/src/: main.rs
runtimes/evcxr_image/: Cargo.toml  README.md
runtimes/evcxr_image/src/: lib.rs
scripts/: push.sh  release.sh
