[package]
name = "evcxr"
version = "0.14.2"
license = "MIT OR Apache-2.0"
description = "An Evaluation Context for Rust"
repository = "https://github.com/evcxr/evcxr"
readme = "README.md"
authors = ["The Evcxr Authors"]
edition = "2021"
rust-version = "1.65"

[dependencies]
anyhow = "1.0.33"
tempfile = "3.1.0"
libc = "0.2.80"
json = "0.12.4"
regex = { version = "1.3.1", default-features = false, features = [ "std" ] }
once_cell = "1.5.2"
libloading = "0.7.0"
dirs = "4.0.0"
which = "4.0.2"
evcxr_input = "1.0.0"
unicode-segmentation = "1.7.1"
crossbeam-channel = "0.5.5"

ra_ap_ide = "=0.0.149"
ra_ap_ide